--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
       <div class="about_white">
         <div class="about_white_text">
           <h2>about.</h2>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus nam, provident quisquam culpa vitae ea.
-            Minus, incidunt eum qui accusamus illo, ipsa et rerum eos est recusandae non! Ipsam, aliquid.</p>
+          <p>
+            &nbsp; &nbsp;&nbsp; &nbsp;&nbsp;從小就對語言具有濃厚興趣，大學選擇英、日雙修。開始工作這幾年，透過公司購買開發軟件，工作效率得到大幅度提升，開始萌生想深入了解並撰寫程式的念頭。日前剛於台中資策會AI班完成結訓，與團隊一起開發出一套藉由肢體偵測之辨位遊戲，並且製作出完整網頁在往後將著重於影像辨識、機器學習專案開發。
+            跳脫原本所熟悉的產業需要勇氣，但一旦選擇了，便為自己選的路堅持下去。</p>
         </div>
       </div>
       <div class="skill">
@@ -78,32 +79,32 @@
       <div class="project_container">
         <h2>projects.</h2>
         <ul class="web_img">
-          <li><a href=""><img src="./imgs/web_photo/01.png" alt="">
+          <li><a href="https://allenw1991.github.io/project.1_questionnaire/https://allenw1991.github.io/project.1_questionnaire/Questionnaire"><img src="./imgs/web_photo/01.png" alt="">
               <div class="middle">
                 <div class="text">Questionnaire</div>
               </div>
             </a></li>
-          <li><a href=""><img src="./imgs/web_photo/02.png" alt="">
+          <li><a href="https://allenw1991.github.io/project.2/Music_Player"><img src="./imgs/web_photo/02.png" alt="">
               <div class="middle">
                 <div class="text">Music Player</div>
               </div>
             </a></li>
-          <li><a href=""><img src="./imgs/web_photo/03.png" alt="">
+          <li><a href="https://allenw1991.github.io/project.2/kirai/timeline.html"><img src="./imgs/web_photo/03.png" alt="">
               <div class="middle">
                 <div class="text">Timeline</div>
               </div>
             </a></li>
-          <li><a href=""><img src="./imgs/web_photo/04.png" alt="">
+          <li><a href="https://allenw1991.github.io/project.3_perfumestore/"><img src="./imgs/web_photo/04.png" alt="">
               <div class="middle">
                 <div class="text">PerfumeStore</div>
               </div>
             </a></li>
-          <li><a href=""><img src="./imgs/web_photo/07.png" alt="">
+          <li><a href="https://allenw1991.github.io/project.4_dessertstore/"><img src="./imgs/web_photo/07.png" alt="">
               <div class="middle">
                 <div class="text">DessertStore</div>
               </div>
             </a></li>
-          <li><a href=""><img src="./imgs/web_photo/08.png" alt="">
+          <li><a href="https://allenw1991.github.io/project.5_todolist/"><img src="./imgs/web_photo/08.png" alt="">
               <div class="middle">
                 <div class="text">TodoList</div>
               </div>
