--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <div class="project_container">
         <h2>projects.</h2>
         <ul class="web_img">
-          <li><a href="https://allenw1991.github.io/project.1_questionnaire/https://allenw1991.github.io/project.1_questionnaire/Questionnaire"><img src="./imgs/web_photo/01.png" alt="">
+          <li><a href="https://allenw1991.github.io/project.1_questionnaire/Questionnaire"><img src="./imgs/web_photo/01.png" alt="">
               <div class="middle">
                 <div class="text">Questionnaire</div>
               </div>
@@ -109,7 +109,7 @@
                 <div class="text">TodoList</div>
               </div>
             </a></li>
-          <li><a href=""><img src="./imgs/web_photo/09.png" alt="">
+          <li><a href="https://allenw1991.github.io/project.6_HFitness/"><img src="./imgs/web_photo/09.png" alt="">
               <div class="middle">
                 <div class="text">HFitness</div>
               </div>
