--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
         <div class="about_white_text">
           <h2>about.</h2>
           <p>
-            &nbsp; &nbsp;&nbsp; &nbsp;&nbsp;從小就對語言具有濃厚興趣，大學選擇英、日雙修。開始工作這幾年，透過公司購買開發軟件，工作效率得到大幅度提升，開始萌生想深入了解並撰寫程式的念頭。日前剛於台中資策會AI班完成結訓，與團隊一起開發出一套藉由肢體偵測之辨位遊戲，並且製作出完整網頁在往後將著重於影像辨識、機器學習專案開發。
-            跳脫原本所熟悉的產業需要勇氣，但一旦選擇了，便為自己選的路堅持下去。</p>
+            &nbsp; &nbsp;&nbsp; &nbsp;&nbsp;熱愛登⼭，⼤學就讀元智⼤學應⽤外語系，選擇英、⽇雙修。開始⼯作這幾年，透過公司引進市調軟
+            件，⼯作效率得到⼤幅度提升，開始萌⽣想深入了解並⾃⼰撰寫程式的念頭。⽇前剛於台中資策會AI班完成
+            600⼩時結訓，期間也更加進修網⾴前端開發。往後將著重於前端網⾴、影像辨識以及機器學習專案開
+            發。 跳脫原本所熟悉的產業舒適圈需要勇氣，但⼀旦決定，便會堅持努⼒於⾃⼰的選擇。</p>
         </div>
       </div>
       <div class="skill">
@@ -66,7 +68,7 @@
         </div>
         <div class="skill_2">
           <h3>ML</h3>
-          <p></p>
+          <p>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;具有操作ML各種模型如</p>
           <button>LEARN MORE</button>
         </div>
       </div>
