--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <h1>Hello<br>
             I'm Allen <br>
             Wang</h1>
-          <p>A full stack allaround designer that placerat in massa consectetur</p>
+          <p>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;一位前段網頁開發工程師，同時具備AI領域機器學習及深度學習知識，與訓練模型操作經驗。</p>
         </div>
         <div class="my_photo"><img src="./imgs/portrait.jpg" alt=""></div>
       </div>
