--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <h1>Hello<br>
             I'm Allen <br>
             Wang</h1>
-          <p>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;一位前段網頁開發工程師，同時具備AI領域機器學習及深度學習知識，與訓練模型操作經驗。</p>
+          <p>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;一位前端網頁開發工程師，同時具備AI領域機器學習及深度學習知識，與訓練模型操作經驗。</p>
         </div>
         <div class="my_photo"><img src="./imgs/portrait.jpg" alt=""></div>
       </div>
@@ -68,7 +68,7 @@
         </div>
         <div class="skill_2">
           <h3>ML</h3>
-          <p>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;具有操作ML各種模型如</p>
+          <p>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;具有操作ML各種模型如(待更新)</p>
           <button>LEARN MORE</button>
         </div>
       </div>
