--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="skill">
         <div class="skill_1">
           <h3>Front-End</h3>
-          <p>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;除了在資策會培訓中所學的基本html、css、javascript、jQuery，訓練期間也自學scss預處理及flexbox容器概念，並且目前正在學習Vue.js框架、以及加強前後端整合技術。</p>
+          <p>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;除了在資策會培訓中所學的基本html、css、javascript、jQuery，訓練期間也自學scss預處理及flexbox容器概念及無數次切版訓練，並且目前正在學習Vue.js框架、以及加強前後端整合技術。</p>
           <button>LEARN MORE</button>
         </div>
         <div class="skill_2">
