--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <h1>Hello<br>
             I'm Allen <br>
             Wang</h1>
-          <p>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;一位前端網頁開發工程師，同時具備AI領域機器學習及深度學習知識，與訓練模型操作經驗。</p>
+          <p>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;一位前端網頁開發工程師，並同時具備AI領域機器學習及深度學習知識。</p>
         </div>
         <div class="my_photo"><img src="./imgs/portrait.jpg" alt=""></div>
       </div>
@@ -54,7 +54,7 @@
         <div class="about_white_text">
           <h2>about.</h2>
           <p>
-            &nbsp; &nbsp;&nbsp; &nbsp;&nbsp;熱愛登⼭，⼤學就讀元智⼤學應⽤外語系，選擇英、⽇雙修。開始⼯作這幾年，透過公司引進市調軟
+            &nbsp; &nbsp;&nbsp; &nbsp;&nbsp;我是王卲平，熱愛登⼭。⼤學就讀元智⼤學應⽤外語系，選擇英、⽇雙修。開始⼯作這幾年，透過公司引進市調軟
             件，⼯作效率得到⼤幅度提升，開始萌⽣想深入了解並⾃⼰撰寫程式的念頭。⽇前剛於台中資策會AI班完成
             600⼩時結訓，期間也更加進修網⾴前端開發。往後將著重於前端網⾴、影像辨識以及機器學習專案開
             發。 跳脫原本所熟悉的產業舒適圈需要勇氣，但⼀旦決定，便會堅持努⼒於⾃⼰的選擇。</p>
@@ -63,12 +63,12 @@
       <div class="skill">
         <div class="skill_1">
           <h3>Front-End</h3>
-          <p>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;除了在資策會培訓中所學的基本html、css、javascript、jQuery，訓練期間也自學scss預處理及flexbox容器概念，並且目前正在學習Vue.js框架、以及加強前後端整合技術。</p>
+          <p>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;除了在資策會培訓中所學的基本html、css、javascript、jQuery，訓練期間也自主學習scss預處理及flexbox容器概念，實際撰寫於網頁作品。</p>
           <button>LEARN MORE</button>
         </div>
         <div class="skill_2">
           <h3>ML</h3>
-          <p>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;具有操作ML各種模型如(待更新)</p>
+          <p>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;對於機器學習/深度學習模型有一定認知，擁有LineBot及FB chatBot API串接，及Azure AI相關資源服務使用經驗。曾參與openCV影像處理結合mediapipe製作肢體辨識專案製作。</p>
           <button>LEARN MORE</button>
         </div>
       </div>
