--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <h1>Hello<br>
             I'm Allen <br>
             Wang</h1>
-          <p>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;一位前端網頁開發工程師，並同時具備AI領域機器學習及深度學習知識。</p>
+          <p>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;一位前端開發工程師，並同時具備AI領域機器學習及深度學習知識。</p>
         </div>
         <div class="my_photo"><img src="./imgs/portrait.jpg" alt=""></div>
       </div>
